[tool.poetry]
name = "hoge-module"
version = "0.1.0"
description = ""
authors = ["masayukeeeeee <masayukeeeee@gmail.com>"]
readme = "README.md"
packages = [{include = "hoge_module", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
